--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -72,3 +72,9 @@ body {
 .module-text {
   text-align: left;
 }
+
+.no-arrows::-webkit-inner-spin-button,
+.no-arrows::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
